# VALAX

./: .gitignore  .python-version  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmarks.yml  docs.yml  examples.yml  tests.yml
docs/: architecture.md  benchmarks.md  design-rationale.md  examples.md  getting-started.md  index.md  landscape.md  risk-factors.md  risk-overview.md  roadmap.md  theory.md  vision.md
docs/api/: calibration.md  curves.md  dates.md  greeks.md  instruments.md  market.md  models.md  pricing.md  risk.md  surfaces.md
docs/applications/: index.md  market-risk.md  quant-research.md  regulatory.md  treasury.md
docs/architecture/: jax-patterns.md  mc-curves-2.md  overview.md  production.md  quantlib-validation-pyramid.md
docs/guide/: analytical.md  calibration.md  callable-bonds.md  credit.md  curves.md  equity-exotics.md  fixed-income.md  fx.md  greeks.md  inflation.md  instruments.md  lattice.md  monte-carlo.md  pca-rates.md  pde.md  rates-exotics.md  reproducibility_and_arbitrage_tests.md  risk.md  short-rate.md  slv.md  synthetic_market.md  tutorial-rates.md  vol-surfaces.md  why-multicurve.md
examples/: 01_equity_options.py  02_sabr_smile.py  03_fixed_income.py  04_rates_derivatives.py  05_monte_carlo.py  06_pde_and_lattice.py  07_synthetic_market.py  08_end_to_end_workflow.py  09_pca_rates_pnl.py
examples/comparisons/: 01_european_options.py  02_fixed_income.py  03_sabr_smile.py  04_caps_and_swaptions.py  05_monte_carlo.py  06_pde_and_lattice.py  07_heston_smile.py  08_risk_greeks_var.py
scripts/: md2org.sh  regen_goldens.py
tests/: conftest.py
tests/golden/: _helpers.py  (+1 more)
valax/: __init__.py
(+201 files in other folders)
